Source/WebCore/rendering/mathml/RenderMathMLOperator.h
@@ -64,9 +64,8 @@ public:
 
     MathMLElement& element() { return toMathMLElement(nodeForNonAnonymous()); }
 
-    void stretchToHeight(int pixelHeight);
-    int stretchHeight() { return m_stretchHeight; }
-    float expandedStretchHeight() const;
+    void stretchTo(int heightAboveBaseline, int depthBelowBaseline);
+    int stretchSize() const { return m_stretchHeightAboveBaseline + m_stretchDepthBelowBaseline; }
     
     bool hasOperatorFlag(MathMLOperatorDictionary::Flag flag) const { return m_operatorFlags & flag; }
 
@@ -111,7 +110,8 @@ private:
     LayoutRect paintCharacter(PaintInfo&, UChar, const LayoutPoint& origin, CharacterPaintTrimming);
     void fillWithExtensionGlyph(PaintInfo&, const LayoutPoint& from, const LayoutPoint& to);
 
-    int m_stretchHeight;
+    int m_stretchHeightAboveBaseline;
+    int m_stretchDepthBelowBaseline;
     bool m_isStretched;
 
     UChar m_operator;
